--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
-		"better-sqlite3": "^9.4.3"
+		"better-sqlite3": "^9.4.3",
+		"yaml": "^2.8.2"
 	}
 }
