📦 chore: Update devcontainer with essential tools and user setup

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -22,7 +22,7 @@ RUN curl -fsSL https://deb.nodesource.com/setup_20.x | bash - \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Claude and Codex CLIs globally
-RUN npm install -g @anthropic-ai/claude-code @openai/codex
+RUN npm install -g @anthropic-ai/claude-code @openai/codex -g @google/gemini-cli
 
 # Install common Svelte/SvelteKit tools globally
 RUN npm install -g pnpm
